tests/instantiating/range_negative_right_bound_in_list/stderr.golden
error: negative range right bound -4 in value with index 1
bus.fbd +3:13
   |
 3 |     range = [0:12, 2:-4]
   |             ^^^^^^^^^^^^
